Fix text alignment in the 'no-mobile-version' stub

--- a/src/main/react/workspace/components/UI/noMobileVersion.module.css
+++ b/src/main/react/workspace/components/UI/noMobileVersion.module.css
@@ -49,6 +49,7 @@
 .noMobileVersionTextWrapper {
   display: flex;
   flex-direction: column;
+  text-align: center;
   gap: 12px;
 }
 
